--- a/index.html
+++ b/index.html
@@ -36,11 +36,12 @@
                     </select>
                   </div>
                   <p class="subtitle">Use the buttons below to Keep Score</p>
+                  <p class="subtitle" id="gameInfo"></p>
                 </div>
                 <footer class="card-footer">
-                  <button id="p1Button" class="is-primary button card-footer-item">+1 Player One</button>
-                  <button id="p2Button" class="is-info button card-footer-item">+2 Player One</button>
-                  <button id="reset" class="is-danger button card-footer-item">Reset</button>
+                  <button id="p1Button" class="is-primary button card-footer-item is-large">+1 Player One</button>
+                  <button id="p2Button" class="is-info button card-footer-item is-large">+2 Player One</button>
+                  <button id="reset" class="is-danger button card-footer-item is-large">Reset</button>
                 </footer>
               </div>
             </div>
